test/spec_vectors/block/fail/module_46.wat
(module (func $type-value-f64-vs-f32 (result f32) (block (result f64) (f32.const 0.0))))